--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=notes
+
+spring.datasource.url=jdbc:mysql://localhost:3306/securenotes
+spring.datasource.username=root
+spring.datasource.password=root
+
+spring.security.user.name=admin
+spring.security.user.password=password
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
